syntax = "proto3";
package relation;

enum Source {
  Undefined = 0;
  APIGateway = 1;
  Backend = 2;
}

message EmptyResponse {
}

message FollowRequest {
  int64 uid = 1;
  int64 to_uid = 2;
  Source source = 3;
}

message RelationRequest {
  int64 uid = 1;
  repeated int64 uids = 2;
  Source source = 3;
}

message RelationItem {
  int32 relation = 1;
  int64 follow_time = 2;
  int64 followed_time = 3;
}

message RelationResponse {
  map<int64, RelationItem> rm = 1;
}

message ListRequest {
  int64 uid = 1;
  int64 last_id = 2;
  Source source = 3;
}

message FollowItem {
  int64 uid = 1;
  int64 create_time = 2;
}

message ListResponse {
  repeated FollowItem item_list = 1;
}

message CountRequest {
  repeated int64 uids = 1;
  Source source = 2;
}

message RelationCount {
  int64 follow_count = 1;
  int64 follower_count = 2;
}

message CountResponse {
  map<int64, RelationCount> relation_count = 1;
}

service Relation {
  rpc Follow(FollowRequest) returns (EmptyResponse);
  rpc Unfollow(FollowRequest) returns (EmptyResponse);
  rpc GetFollowList(ListRequest) returns (ListResponse);
  rpc GetFollowerList(ListRequest) returns (ListResponse);
  rpc GetRelation(RelationRequest) returns (RelationResponse);
  rpc GetRelationCount(CountRequest) returns (CountResponse);
}
